feat: add endpoint to retrieve user by address and refactor related methods
